# sip-examples

./: .gitignore  README.md  build.pl  environment.yml  requirements.txt
.github/workflows/: linux.yml  win.yml
ArrayCode/: main.py  pyproject.toml  scale_array.cpp  scale_array.h  scale_array.sip
ClassCode/: main.py  point.cpp  point.h  point.sip  pyproject.toml
MethodCode/: main.py  pyproject.toml
ModuleCode/: fib.c  fib.h  fib.sip  main.py  pyproject.toml
